force-app/main/default/objects/WhatsApp_Interaction__c/WhatsApp_Interaction__c.object-meta.xml
<CustomObject>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>WhatsApp Interaction</label>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>