force-app/main/default/objects/WhatsApp_Interaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Links to the Contact record of the field surveyor who sent the WhatsApp message</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WhatsApp Interactions</relationshipLabel>
    <relationshipName>WhatsApp_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>