force-app/main/default/objects/WhatsApp_Interaction__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Raw message text or parsed location string received from WhatsApp</inlineHelpText>
    <label>Message Body</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>