force-app/main/default/objects/WhatsApp_Interaction__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Sender&apos;s WhatsApp number; used for reply routing</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>