force-app/main/default/objects/WhatsApp_Interaction__c/fields/Potential_Site__c.field-meta.xml
<CustomField>
    <fullName>Potential_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Potential Site record created or matched from this interaction</inlineHelpText>
    <label>Potential Site</label>
    <referenceTo>Potential_Site__c</referenceTo>
    <relationshipLabel>WhatsApp Interactions</relationshipLabel>
    <relationshipName>WhatsApp_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>