force-app/main/default/objects/WhatsApp_Interaction__c/fields/Resolved_Address__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Address__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Address resolved by reverse geocoding the submitted GPS coordinates</inlineHelpText>
    <label>Resolved Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>