force-app/main/default/objects/WhatsApp_Interaction__c/fields/Response_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Response_Sent_At__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Timestamp when the scorecard was sent back to the field surveyor</inlineHelpText>
    <label>Response Sent At</label>
    <type>DateTime</type>
</CustomField>