force-app/main/default/objects/WhatsApp_Interaction__c/fields/Response_Time_min__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_min__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>IF(
    NOT(ISBLANK(Response_Sent_At__c)),
    (Response_Sent_At__c - CreatedDate) * 1440,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>monitors sub-5-minute SLA for WhatsApp scorecard delivery</inlineHelpText>
    <label>Response Time (min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>