force-app/main/default/objects/WhatsApp_Interaction__c/fields/Submitted_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Latitude__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Latitude extracted from WhatsApp GPS share</inlineHelpText>
    <label>Submitted Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>